# KleverGold

./: .gitignore  DEPLOY_RENDER.md  GoldNowSection (1).jsx  LICENSE  README.md  README_FIX.txt  config.js  deploy.yml  dummy.txt  env.builds  env.functions  index.html  netlify.toml  package-lock.json  package.json  package_old.json  render.yaml  vite.config.js
epitome-backend/: .env.example  pyproject.toml
epitome-backend/src/epitome/api/: main.py
epitome-backend/src/epitome/obs/: __init__.py  logging.py  metrics.py
epitome-backend/src/epitome/service/: backtest.py  conformal.py  policy.py  regime.py  risk.py  statsforecast_model.py
netlify/functions/: metalprices.js  news-feed.js  news.js  update-csv.js
public/: config.js  weights.news.json
public/data/: xauusd_ohlc_clean.csv
scripts/: download_macro_data.py  train_price_model.py  train_sentiment_model.py  train_super_model.py
server/: index.js  main.py  package.json  requirements.txt
server/routes/: emailSignup.js
src/: App.jsx  App_backup.jsx  App_old.jsx  api.js  config.js  storage.js  utils.js
src/components/: CandleChart.jsx  CsvLoader.jsx  EmailSignupDialog.jsx  EpitomeBacktestPanel.jsx  EpitomeForecastPanel.jsx  EpitomeRiskAndRegime.jsx  EpitomeSignalsPanel.jsx  ErrorBoundary.jsx  FloatingMenu.jsx  GoldCsvDashboard.jsx  GoldNewsCarousel.jsx  GoldNewsGlassCarousel.jsx  GoldNowSection.jsx  HScrollCarousel.jsx  Kpi.jsx  ModernCandleAndRange.jsx  ModernHistograms.jsx  NewsSection.jsx  TopTable.jsx  YearGroupSelector.jsx
src/lib/: webllm.js
src/services/: epitomeApi.js
src/utils/: newsApi.js  (+5 more)
