[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epitome-backend"
version = "0.1.0"
description = "KleverGold EPITOME minimal API (forecast quantiles + regime)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "numpy>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
