[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epitome-backend"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "pyarrow>=16.1.0",
  "scikit-learn>=1.5.0",
  "statsforecast>=1.7.5",
  "numba>=0.59.1",
  "mapie>=0.9.2",
  "arch>=6.3.0",
  "hmmlearn>=0.3.2",
  "ruptures>=1.1.9",
  "prometheus-client>=0.20.0",
  "loguru>=0.7.2"
]

[tool.setuptools.packages.find]
where = ["src"]
